# agentic_city_prototype

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  bounties.json  mcp-config.json
.beads/: metadata.json
client/: index.html  package.json  vite.config.ts
client/src/: main.ts
config/: llm.toml
debug-ui/: CLAUDE.md  index.html  package-lock.json  vite.config.ts
debug-ui/src/: main.ts
mcp-game/: Cargo.toml
mcp-game/src/: main.rs
mcp-gm/: Cargo.toml
mcp-gm/src/: main.rs
schemas/: Cargo.toml  build.rs
schemas/schemas/: world.fbs
schemas/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  items.rs  lib.rs  main.rs  process_manager.rs  scenario.rs  tick.rs
server/src/agents/: action_log.rs  actions.rs  ai.rs  ai_chat.rs  ai_decision.rs  behavior.rs  claude.rs  components.rs  conversation.rs  event_log.rs  game_events.rs  gm.rs  mailbox.rs  mod.rs  movement.rs  needs.rs  pathfinding.rs  perception.rs  personality.rs  social.rs  summarizer.rs  thinking_log.rs  token_tracking.rs  trading.rs
server/src/llm/: config.rs  mod.rs  persistence.rs  session_registry.rs  supervisor.rs  types.rs
server/src/llm/providers/: claude.rs  mod.rs  openai.rs
server/src/llm/tools/: catalog.rs  execute.rs  mod.rs  policy.rs  schema.rs
server/src/network/: action_handler.rs  agent_relay.rs  broadcast.rs  commands.rs  mod.rs  serializer.rs  system_relay.rs  ws.rs
server/src/world/: bounty.rs  bounty_contract.rs  bounty_injector.rs  economy.rs  hospital.rs  jobs.rs  map.rs  mod.rs  services.rs  shifts.rs  structures.rs  transactions.rs
server/tests/: integration.rs  llm_session_engine.rs  scenarios.rs
server/tests/common/: mod.rs
