[package]
name = "mcp-game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-game"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
server = { path = "../server" }
