[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", default-features = false }
bevy-tokio-tasks = "0.18"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
flatbuffers = "25"
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
schemas = { path = "../schemas" }
